# repo-inbox

./: .gitignore  README.md  RemBench.hs  duh  nofib-gen  nofib-log  nofib-nobang  nofib-stripped  paper.md
aeson/: bangfiles  remsreadme.md  stack.yaml
aeson-benchmarks/: Main.hs
aeson/benchmarks/: .AesonParse_p.prof.swp  .StrictBench.hs.swp  =1.0  AesonParse.hs  AesonParse.ps  AesonParse_p.prof  AesonParse_p.ps  Makefile  StrictBench.hs  aeson-benchmarks.cabal  bench-parse.py  runParse.sh
aeson/benchmarks/log/: bangprof.prof  nbangsprof.prof
benchmark/Applist/: README
benchmark/Applist/bangpatterns/: bangfiles  bangpacks
benchmark/Applist/dollarbang/: IO1.hs  strictapfiles  strictappacks
benchmark/Applist/old/: allNames  build-reports  hackage-apps  hackageapps  nameList  names  strictlist
benchmark/GetApp/: GetApps  GetApps.hs  README.md  makef
benchmark/HasStrict/: Cpp  Cpp.hs  FindStrict.hs  HasBang.hs  HasStrict.hs  README  Types.hs  WashHash  WashHash.hs  clean.hs  errorsrc  washthis
benchmark/HasStrict/extensions/: all  err  errs  extnors  extns  getExt  getExt.hs  hash  hashcmd  hashfiles  pragmas
benchmark/IO/: IO2  IO2.hs  myfile  myfile.result  reverseSort  reverseSort.hs
benchmark/bangfiles/: IO1.hs
benchmark/old/: shcmd  shellcmd
benchmark/old/Cabal/: FindHs.hs  IO1  README.md  UsedLibs.hs  allcb  alllibs  cbs  crs  libFreq  libFreq.hs  libnames  libs  makef  myfile.result  strictcb  todo
benchmark/old/LargePacks/: FindLargePacks  FindLargePacks.hs  IO1  IO1.hs  README.md  allsize  myfile.result  size.hs
cassava/: bench2.sh  list
dummy/: Main  Main.hs  haha  stdin  that  that.hs  timing.temp
gcSimulator/: gcSimulator  gcSimulator.hs  gcSimulator.prof
geneaeson/: .StrictBench.hs.swp  StrictBench.hs  aeson-benchmarks.cabal  aeson.cabal
nofib/: bangs
shootout/bintree/: bintree
shootout/knucleotide/: knucleotide.ghc_run
th/: CustomShow.hs  Main.hs  README  Splices.hs  Tmain.hs  prof.hs  profDef.hs  temp  test_show  test_show.hs  th.cabal
tick/: genSurvivor.hs.opt1  genSurvivor.hs.opt2  genSurvivor.hs.opt3  genSurvivor.hs.opt4  genTick.out
(+68 files in other folders)
